browser/themes/shared/customizableui/customizeMode.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

@namespace html url("http://www.w3.org/1999/xhtml");

/* Customization mode */

:root {
  --drag-drop-transition-duration: 0.3s;

  @media (prefers-reduced-motion: reduce) {
    --drag-drop-transition-duration: 0s;
  }
}

:root[customizing] .customization-target:not(#widget-overflow-fixed-list) {
  min-width: var(--size-layout-xsmall);
}

/* When customizing, overflowable toolbars move automatically moved items back
 * from the overflow menu, but we still don't want to render them outside of
 * the customization target. */
toolbar[overflowable][customizing] > .customization-target {
  overflow: clip;
}

#customization-container {
  flex-direction: column;
  min-height: 0;
  background-color: var(--toolbar-background-color);
  color: var(--toolbar-text-color);
  color-scheme: var(--toolbar-color-scheme);

  &:not([hidden]) {
    /* In a separate rule to avoid 'display:flex' causing the node to be
     * displayed while the container is still hidden. */
    display: flex;
  }
}

#customization-content-container {
  display: flex;
  flex: 1; /* Grow so there isn't empty space below the footer */
  min-height: 0; /* Allow this to shrink so the footer doesn't get pushed out. */
}

#customization-header {
  font-weight: var(--font-weight-heading);
  font-size: 1.2em;
  margin: 20px 20px 15px;
}

#customization-panel-container {
  --customization-panel-padding: 20px;

  overflow-y: auto;
  display: flex;
  flex-direction: column;
  flex: none;
  padding: 0 var(--customization-panel-padding) 25px;
}

#customization-footer-spacer,
#customization-spacer {
  flex: 1 1 auto;
}

#customization-footer {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  flex-wrap: wrap;
  border-top: 1px solid rgba(0, 0, 0, 0.15);
  padding: 10px;

  > .footer-button,
  > .customization-checkbox,
  > .customization-link {
    margin-block: 0;
  }
}

#customization-palette-container {
  display: flex;
  flex-direction: column;
  flex: 1;
}

#customization-palette {
  padding: 5px 20px 20px;
  transition: opacity 0.3s ease-in-out;
  opacity: 0;

  &:not([hidden]) {
    display: block;
    flex: 1 1 auto;
    overflow: auto;
    min-height: 3em;
    margin-bottom: 20px;
  }

  &[showing="true"] {
    opacity: 1;
  }

  .toolbarbutton-1 {
    appearance: none;
    flex-direction: column;
    padding: 12px 0 9px;
    margin: 0;

    :root[lwtheme-image] & {
      fill: currentColor;
    }

    > .toolbarbutton-badge-stack > .toolbarbutton-icon {
      width: var(--panel-and-palette-icon-size);
      height: var(--panel-and-palette-icon-size);
      min-width: var(--panel-and-palette-icon-size);
      min-height: var(--panel-and-palette-icon-size);
      padding: 0;
    }
  }
}
/* ... */

